--- a/note/cafe-latte.html
+++ b/note/cafe-latte.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,15 +61,15 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6c90a28">Cafe Latte</a></li>
-<li><a href="#orgccaafed">카페라떼(매일유업)</a></li>
+<li><a href="#3efa6fae">Cafe Latte</a></li>
+<li><a href="#8f70a477">카페라떼(매일유업)</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org6c90a28" class="outline-2">
-<h2 id="org6c90a28">Cafe Latte</h2>
-<div class="outline-text-2" id="text-org6c90a28">
+<div id="outline-container-3efa6fae" class="outline-2">
+<h2 id="3efa6fae">Cafe Latte</h2>
+<div class="outline-text-2" id="text-3efa6fae">
 <p>
 카페라떼(혹은 카페라테)는 이탈리아어의 커피(cafe)와 우유(latte)의 합성어로,
 이탈리아에서 유래한 <a href="coffee.html">커피</a>를 즐기는 다양한 방법 중 하나이다.
@@ -99,9 +90,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgccaafed" class="outline-2">
-<h2 id="orgccaafed">카페라떼(매일유업)</h2>
-<div class="outline-text-2" id="text-orgccaafed">
+<div id="outline-container-8f70a477" class="outline-2">
+<h2 id="8f70a477">카페라떼(매일유업)</h2>
+<div class="outline-text-2" id="text-8f70a477">
 <p>
 오리지널 카페라떼와 비슷하게 커피와 우유를 조합한 음료로 차갑게 해서 판매하는 음료다.
 매일유업에서 제조한다.
@@ -140,7 +131,7 @@
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/coffee.html">커피</a></h2>
 <div class="article-link-date">
-2020년 5월 8일 수정</div>
+2020년 5월 9일 수정</div>
 </div>
 </div>
 </div>
