--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,11 +61,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga7ac32c">사용법</a>
+<li><a href="#f31a3a78">사용법</a>
 <ul>
-<li><a href="#org9fd4f0d">무제한 잠자기 방지</a></li>
-<li><a href="#orgfa4d59b">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org2d0d253">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#e83c70e9">무제한 잠자기 방지</a></li>
+<li><a href="#89810cec">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#919dfeb9">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -85,13 +76,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orga7ac32c" class="outline-2">
-<h2 id="orga7ac32c">사용법</h2>
-<div class="outline-text-2" id="text-orga7ac32c">
+<div id="outline-container-f31a3a78" class="outline-2">
+<h2 id="f31a3a78">사용법</h2>
+<div class="outline-text-2" id="text-f31a3a78">
 </div>
-<div id="outline-container-org9fd4f0d" class="outline-3">
-<h3 id="org9fd4f0d">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org9fd4f0d">
+<div id="outline-container-e83c70e9" class="outline-3">
+<h3 id="e83c70e9">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-e83c70e9">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -102,9 +93,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgfa4d59b" class="outline-3">
-<h3 id="orgfa4d59b">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgfa4d59b">
+<div id="outline-container-89810cec" class="outline-3">
+<h3 id="89810cec">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-89810cec">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -115,9 +106,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org2d0d253" class="outline-3">
-<h3 id="org2d0d253">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org2d0d253">
+<div id="outline-container-919dfeb9" class="outline-3">
+<h3 id="919dfeb9">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-919dfeb9">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
