--- a/note/dd.html
+++ b/note/dd.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,9 +61,9 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9396794">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#org68919a3">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#orgbffd68e">팁</a></li>
+<li><a href="#6ded5578">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#c54a376a">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#9ba880c5">팁</a></li>
 </ul>
 </div>
 </div>
@@ -89,9 +80,9 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-org9396794" class="outline-2">
-<h2 id="org9396794">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-org9396794">
+<div id="outline-container-6ded5578" class="outline-2">
+<h2 id="6ded5578">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-6ded5578">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
@@ -141,9 +132,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-org68919a3" class="outline-2">
-<h2 id="org68919a3">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-org68919a3">
+<div id="outline-container-c54a376a" class="outline-2">
+<h2 id="c54a376a">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-c54a376a">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
@@ -165,9 +156,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orgbffd68e" class="outline-2">
-<h2 id="orgbffd68e">팁</h2>
-<div class="outline-text-2" id="text-orgbffd68e">
+<div id="outline-container-9ba880c5" class="outline-2">
+<h2 id="9ba880c5">팁</h2>
+<div class="outline-text-2" id="text-9ba880c5">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
