--- a/note/definition.html
+++ b/note/definition.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,10 +61,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org0524eca">대충 사용하는 의미</a></li>
-<li><a href="#org8f1c531">구세대 언어의 예</a></li>
-<li><a href="#org11bc55a">현대적인 언어의 예</a></li>
-<li><a href="#org6361b48">결론</a></li>
+<li><a href="#0bb03bdd">대충 사용하는 의미</a></li>
+<li><a href="#26b276e5">구세대 언어의 예</a></li>
+<li><a href="#8622ea94">현대적인 언어의 예</a></li>
+<li><a href="#c2cad422">결론</a></li>
 </ul>
 </div>
 </div>
@@ -82,9 +73,9 @@
 IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(definition) 개념을 다룬다.
 </p>
 
-<div id="outline-container-org0524eca" class="outline-2">
-<h2 id="org0524eca">대충 사용하는 의미</h2>
-<div class="outline-text-2" id="text-org0524eca">
+<div id="outline-container-0bb03bdd" class="outline-2">
+<h2 id="0bb03bdd">대충 사용하는 의미</h2>
+<div class="outline-text-2" id="text-0bb03bdd">
 <blockquote>
 <p>
 정의하다 = 코딩하다
@@ -100,9 +91,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org8f1c531" class="outline-2">
-<h2 id="org8f1c531">구세대 언어의 예</h2>
-<div class="outline-text-2" id="text-org8f1c531">
+<div id="outline-container-26b276e5" class="outline-2">
+<h2 id="26b276e5">구세대 언어의 예</h2>
+<div class="outline-text-2" id="text-26b276e5">
 <p>
 예를 들어 C 언어의 경우 정의는 아래와 같은 식이다.
 </p>
@@ -139,9 +130,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org11bc55a" class="outline-2">
-<h2 id="org11bc55a">현대적인 언어의 예</h2>
-<div class="outline-text-2" id="text-org11bc55a">
+<div id="outline-container-8622ea94" class="outline-2">
+<h2 id="8622ea94">현대적인 언어의 예</h2>
+<div class="outline-text-2" id="text-8622ea94">
 <p>
 예를 들어 <a href="swift.html">Swift</a>로 구조체를 정의하는 방법을 보자.
 </p>
@@ -172,9 +163,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org6361b48" class="outline-2">
-<h2 id="org6361b48">결론</h2>
-<div class="outline-text-2" id="text-org6361b48">
+<div id="outline-container-c2cad422" class="outline-2">
+<h2 id="c2cad422">결론</h2>
+<div class="outline-text-2" id="text-c2cad422">
 <blockquote>
 <p>
 정의와 구현은 일단은 다르다.
