--- a/note/flake8.html
+++ b/note/flake8.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,11 +61,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8ecbd47">설치</a></li>
-<li><a href="#org96e5cac">사용법</a></li>
-<li><a href="#orgdd5f1bc">설정 파일</a></li>
-<li><a href="#orgb7cb17a">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#org1773187">외부 링크</a></li>
+<li><a href="#f6c3e57e">설치</a></li>
+<li><a href="#f31a3a78">사용법</a></li>
+<li><a href="#fafc63ea">설정 파일</a></li>
+<li><a href="#5d5cad6b">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -86,9 +77,9 @@
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-org8ecbd47" class="outline-2">
-<h2 id="org8ecbd47">설치</h2>
-<div class="outline-text-2" id="text-org8ecbd47">
+<div id="outline-container-f6c3e57e" class="outline-2">
+<h2 id="f6c3e57e">설치</h2>
+<div class="outline-text-2" id="text-f6c3e57e">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -98,9 +89,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-org96e5cac" class="outline-2">
-<h2 id="org96e5cac">사용법</h2>
-<div class="outline-text-2" id="text-org96e5cac">
+<div id="outline-container-f31a3a78" class="outline-2">
+<h2 id="f31a3a78">사용법</h2>
+<div class="outline-text-2" id="text-f31a3a78">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -120,9 +111,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgdd5f1bc" class="outline-2">
-<h2 id="orgdd5f1bc">설정 파일</h2>
-<div class="outline-text-2" id="text-orgdd5f1bc">
+<div id="outline-container-fafc63ea" class="outline-2">
+<h2 id="fafc63ea">설정 파일</h2>
+<div class="outline-text-2" id="text-fafc63ea">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -154,9 +145,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-orgb7cb17a" class="outline-2">
-<h2 id="orgb7cb17a">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-orgb7cb17a">
+<div id="outline-container-5d5cad6b" class="outline-2">
+<h2 id="5d5cad6b">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-5d5cad6b">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -189,9 +180,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-org1773187" class="outline-2">
-<h2 id="org1773187">외부 링크</h2>
-<div class="outline-text-2" id="text-org1773187">
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
