--- a/note/flutter.html
+++ b/note/flutter.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,13 +61,13 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgab19978">문제 해결</a>
+<li><a href="#89e15078">문제 해결</a>
 <ul>
-<li><a href="#org8e4851d">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#org8a7f452">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#82ec2a74">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#d8ecbcf5">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
-<li><a href="#org9f1945b">외부 링크</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -90,13 +81,13 @@ Flutter(플러터)는 <a href="dart.html">Dart</a>라는 한 가지 언어로 <a
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-orgab19978" class="outline-2">
-<h2 id="orgab19978">문제 해결</h2>
-<div class="outline-text-2" id="text-orgab19978">
+<div id="outline-container-89e15078" class="outline-2">
+<h2 id="89e15078">문제 해결</h2>
+<div class="outline-text-2" id="text-89e15078">
 </div>
-<div id="outline-container-org8e4851d" class="outline-3">
-<h3 id="org8e4851d">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org8e4851d">
+<div id="outline-container-82ec2a74" class="outline-3">
+<h3 id="82ec2a74">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-82ec2a74">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -129,9 +120,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-org8a7f452" class="outline-3">
-<h3 id="org8a7f452">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-org8a7f452">
+<div id="outline-container-d8ecbcf5" class="outline-3">
+<h3 id="d8ecbcf5">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-d8ecbcf5">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 <a href="ios.html">iOS</a> 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
@@ -166,9 +157,9 @@ was built for iOS. (in target 'Runner' from project 'Runner')
 </div>
 </div>
 </div>
-<div id="outline-container-org9f1945b" class="outline-2">
-<h2 id="org9f1945b">외부 링크</h2>
-<div class="outline-text-2" id="text-org9f1945b">
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://medium.com/flutter/announcing-flutter-1-17-4182d8af7f8e">🌏Announcing Flutter 1.17</a></li>
 </ul>
