--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,22 +61,22 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6599881">기본 사용법</a>
+<li><a href="#88804751">기본 사용법</a>
 <ul>
-<li><a href="#org1b7acdb">패키지 검색</a></li>
-<li><a href="#orgdef8ae0">패키지 정보</a></li>
-<li><a href="#org05a8233">패키지 설치</a></li>
-<li><a href="#org48fd3d9">만료된 버전 확인</a></li>
-<li><a href="#org3950a1c">패키지 업그레이드</a></li>
-<li><a href="#orgef5b9a6">구 버전 삭제하기</a></li>
-<li><a href="#org4fc07d4">패키지 삭제(uninstall)</a></li>
-<li><a href="#org715d0f7">의사 양반(?)</a></li>
+<li><a href="#0c731541">패키지 검색</a></li>
+<li><a href="#fac59d49">패키지 정보</a></li>
+<li><a href="#916a9359">패키지 설치</a></li>
+<li><a href="#a0c3e94a">만료된 버전 확인</a></li>
+<li><a href="#081ec4eb">패키지 업그레이드</a></li>
+<li><a href="#8db02e85">구 버전 삭제하기</a></li>
+<li><a href="#891c2419">패키지 삭제(uninstall)</a></li>
+<li><a href="#09ab1e49">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#org0f795fa">구 버전 패키지 사용하기</a></li>
-<li><a href="#org0440397">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgd146dca">Cask</a></li>
-<li><a href="#org2129915">외부 링크</a></li>
+<li><a href="#f67f4149">구 버전 패키지 사용하기</a></li>
+<li><a href="#419f66bc">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#64ba2c4d">Cask</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -96,31 +87,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-org6599881" class="outline-2">
-<h2 id="org6599881">기본 사용법</h2>
-<div class="outline-text-2" id="text-org6599881">
+<div id="outline-container-88804751" class="outline-2">
+<h2 id="88804751">기본 사용법</h2>
+<div class="outline-text-2" id="text-88804751">
 </div>
-<div id="outline-container-org1b7acdb" class="outline-3">
-<h3 id="org1b7acdb">패키지 검색</h3>
-<div class="outline-text-3" id="text-org1b7acdb">
+<div id="outline-container-0c731541" class="outline-3">
+<h3 id="0c731541">패키지 검색</h3>
+<div class="outline-text-3" id="text-0c731541">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgdef8ae0" class="outline-3">
-<h3 id="orgdef8ae0">패키지 정보</h3>
-<div class="outline-text-3" id="text-orgdef8ae0">
+<div id="outline-container-fac59d49" class="outline-3">
+<h3 id="fac59d49">패키지 정보</h3>
+<div class="outline-text-3" id="text-fac59d49">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org05a8233" class="outline-3">
-<h3 id="org05a8233">패키지 설치</h3>
-<div class="outline-text-3" id="text-org05a8233">
+<div id="outline-container-916a9359" class="outline-3">
+<h3 id="916a9359">패키지 설치</h3>
+<div class="outline-text-3" id="text-916a9359">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -131,9 +122,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-org48fd3d9" class="outline-3">
-<h3 id="org48fd3d9">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-org48fd3d9">
+<div id="outline-container-a0c3e94a" class="outline-3">
+<h3 id="a0c3e94a">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-a0c3e94a">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -145,9 +136,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org3950a1c" class="outline-3">
-<h3 id="org3950a1c">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-org3950a1c">
+<div id="outline-container-081ec4eb" class="outline-3">
+<h3 id="081ec4eb">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-081ec4eb">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -161,9 +152,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgef5b9a6" class="outline-3">
-<h3 id="orgef5b9a6">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-orgef5b9a6">
+<div id="outline-container-8db02e85" class="outline-3">
+<h3 id="8db02e85">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-8db02e85">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -177,18 +168,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org4fc07d4" class="outline-3">
-<h3 id="org4fc07d4">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-org4fc07d4">
+<div id="outline-container-891c2419" class="outline-3">
+<h3 id="891c2419">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-891c2419">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org715d0f7" class="outline-3">
-<h3 id="org715d0f7">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-org715d0f7">
+<div id="outline-container-09ab1e49" class="outline-3">
+<h3 id="09ab1e49">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-09ab1e49">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -199,9 +190,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org0f795fa" class="outline-2">
-<h2 id="org0f795fa">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-org0f795fa">
+<div id="outline-container-f67f4149" class="outline-2">
+<h2 id="f67f4149">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-f67f4149">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -216,9 +207,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org0440397" class="outline-2">
-<h2 id="org0440397">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-org0440397">
+<div id="outline-container-419f66bc" class="outline-2">
+<h2 id="419f66bc">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-419f66bc">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -321,9 +312,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgd146dca" class="outline-2">
-<h2 id="orgd146dca">Cask</h2>
-<div class="outline-text-2" id="text-orgd146dca">
+<div id="outline-container-64ba2c4d" class="outline-2">
+<h2 id="64ba2c4d">Cask</h2>
+<div class="outline-text-2" id="text-64ba2c4d">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -357,9 +348,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-org2129915" class="outline-2">
-<h2 id="org2129915">외부 링크</h2>
-<div class="outline-text-2" id="text-org2129915">
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
