--- a/note/instance.html
+++ b/note/instance.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,32 +61,32 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org43518b6">프로세스 개념</a></li>
-<li><a href="#orgc55462d">특정 서비스의 용어</a></li>
-<li><a href="#orgd1884a9">컴퓨터 프로그래밍 개념</a></li>
+<li><a href="#86c898d4">프로세스 개념</a></li>
+<li><a href="#4a43cd99">특정 서비스의 용어</a></li>
+<li><a href="#38e11b82">컴퓨터 프로그래밍 개념</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org43518b6" class="outline-2">
-<h2 id="org43518b6">프로세스 개념</h2>
-<div class="outline-text-2" id="text-org43518b6">
+<div id="outline-container-86c898d4" class="outline-2">
+<h2 id="86c898d4">프로세스 개념</h2>
+<div class="outline-text-2" id="text-86c898d4">
 <p>
 실행 중인 임의의 프로세스를 인스턴스라고 부르기도 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc55462d" class="outline-2">
-<h2 id="orgc55462d">특정 서비스의 용어</h2>
-<div class="outline-text-2" id="text-orgc55462d">
+<div id="outline-container-4a43cd99" class="outline-2">
+<h2 id="4a43cd99">특정 서비스의 용어</h2>
+<div class="outline-text-2" id="text-4a43cd99">
 <p>
 예를 들어 AWS의 EC2 서비스의 경우 각각의 가상 서버를 EC2 인스턴스라고 부른다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd1884a9" class="outline-2">
-<h2 id="orgd1884a9">컴퓨터 프로그래밍 개념</h2>
-<div class="outline-text-2" id="text-orgd1884a9">
+<div id="outline-container-38e11b82" class="outline-2">
+<h2 id="38e11b82">컴퓨터 프로그래밍 개념</h2>
+<div class="outline-text-2" id="text-38e11b82">
 <p>
 <a href="definition.html">정의</a>를 실체화(?) 시킨 것을 인스턴스라고 부른다.
 </p>
