--- a/note/mongodb.html
+++ b/note/mongodb.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,44 +61,44 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org0d8742d">CLI 사용법 메모</a>
+<li><a href="#4b5e9a5f">CLI 사용법 메모</a>
 <ul>
-<li><a href="#org616bdc2">연결하기(Connect)</a></li>
-<li><a href="#org6cebab4">데이터베이스 선택(Select Database)</a></li>
-<li><a href="#org96dfe72">데이터베이스 목록 보기(List Databases)</a></li>
-<li><a href="#org7b3cffc">컬렉션 조회(List Collections)</a></li>
-<li><a href="#org0d77c2b">삽입(Insert)</a></li>
-<li><a href="#orgc0899de">조회(Find or Query)</a></li>
-<li><a href="#org04ccbe4">수정(Update)</a></li>
-<li><a href="#orgfc7ea13">삭제(Remove)</a></li>
+<li><a href="#bc1e6056">연결하기(Connect)</a></li>
+<li><a href="#f3a2556c">데이터베이스 선택(Select Database)</a></li>
+<li><a href="#8c2c061c">데이터베이스 목록 보기(List Databases)</a></li>
+<li><a href="#53e364c2">컬렉션 조회(List Collections)</a></li>
+<li><a href="#53a39d6b">삽입(Insert)</a></li>
+<li><a href="#a3a785b1">조회(Find or Query)</a></li>
+<li><a href="#70150b85">수정(Update)</a></li>
+<li><a href="#6f54276a">삭제(Remove)</a></li>
 </ul>
 </li>
-<li><a href="#org8829dff">검색 관련 정보</a>
+<li><a href="#ad536c52">검색 관련 정보</a>
 <ul>
-<li><a href="#org004edf0">정렬, 위치, 갯수 제한</a></li>
-<li><a href="#orgf669092">수치 비교</a></li>
-<li><a href="#org7cee3c5">특정 필드 표시하지 않기</a></li>
-<li><a href="#orgfe7fec0">특정 필드가 있는 도큐먼트 검색하기</a></li>
-<li><a href="#org8143804">Not Null</a></li>
+<li><a href="#c79a4779">정렬, 위치, 갯수 제한</a></li>
+<li><a href="#99215271">수치 비교</a></li>
+<li><a href="#b9801a35">특정 필드 표시하지 않기</a></li>
+<li><a href="#16c291bf">특정 필드가 있는 도큐먼트 검색하기</a></li>
+<li><a href="#36f48b7e">Not Null</a></li>
 </ul>
 </li>
-<li><a href="#orgce7cb88">어그리게이트(Aggregate)</a>
+<li><a href="#53388390">어그리게이트(Aggregate)</a>
 <ul>
-<li><a href="#orgfd53339">기초</a></li>
-<li><a href="#org09b42d2">예제</a></li>
-<li><a href="#orge5776e0">몇 가지 유용한 파이프라인 오퍼레이터</a></li>
+<li><a href="#ce62569d">기초</a></li>
+<li><a href="#b313bf06">예제</a></li>
+<li><a href="#0ebf0862">몇 가지 유용한 파이프라인 오퍼레이터</a></li>
 </ul>
 </li>
-<li><a href="#orge5efd40">백업 및 복원(Dump and Restore)</a>
+<li><a href="#83ac97a9">백업 및 복원(Dump and Restore)</a>
 <ul>
-<li><a href="#org6937416">백업(Dump)</a></li>
-<li><a href="#orga3f2ac6">복원(Restore)</a></li>
+<li><a href="#3eb0e193">백업(Dump)</a></li>
+<li><a href="#f29526fa">복원(Restore)</a></li>
 </ul>
 </li>
-<li><a href="#orgcaa4c73">기타</a>
+<li><a href="#7f598db0">기타</a>
 <ul>
-<li><a href="#orgbce4be2">컬렉션 몽땅 비우기(지우기)</a></li>
-<li><a href="#org5e520d1">Replica Set 에서 Primary 바꾸기</a></li>
+<li><a href="#68dde1d3">컬렉션 몽땅 비우기(지우기)</a></li>
+<li><a href="#9bf0a0cc">Replica Set 에서 Primary 바꾸기</a></li>
 </ul>
 </li>
 </ul>
@@ -120,13 +111,13 @@ MongoDB 는 이름처럼 Database 시스템이다.
 이로 인해 NoSQL DB 의 대명사이기도 하다.
 </p>
 
-<div id="outline-container-org0d8742d" class="outline-2">
-<h2 id="org0d8742d"><a href="cli.html">CLI</a> 사용법 메모</h2>
-<div class="outline-text-2" id="text-org0d8742d">
+<div id="outline-container-4b5e9a5f" class="outline-2">
+<h2 id="4b5e9a5f"><a href="cli.html">CLI</a> 사용법 메모</h2>
+<div class="outline-text-2" id="text-4b5e9a5f">
 </div>
-<div id="outline-container-org616bdc2" class="outline-3">
-<h3 id="org616bdc2">연결하기(Connect)</h3>
-<div class="outline-text-3" id="text-org616bdc2">
+<div id="outline-container-bc1e6056" class="outline-3">
+<h3 id="bc1e6056">연결하기(Connect)</h3>
+<div class="outline-text-3" id="text-bc1e6056">
 <p>
 호스트 이름과 포트 번호를 이용해 접속할 때는 아래처럼 사용할 수 있다.
 </p>
@@ -150,9 +141,9 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org6cebab4" class="outline-3">
-<h3 id="org6cebab4">데이터베이스 선택(Select Database)</h3>
-<div class="outline-text-3" id="text-org6cebab4">
+<div id="outline-container-f3a2556c" class="outline-3">
+<h3 id="f3a2556c">데이터베이스 선택(Select Database)</h3>
+<div class="outline-text-3" id="text-f3a2556c">
 <p>
 <code>use</code> 명령을 이용해 데이터베이스를 선택할 수 있다.
 </p>
@@ -162,9 +153,9 @@ dbname 은 생략할 수 있다.
 </div>
 </div>
 </div>
-<div id="outline-container-org96dfe72" class="outline-3">
-<h3 id="org96dfe72">데이터베이스 목록 보기(List Databases)</h3>
-<div class="outline-text-3" id="text-org96dfe72">
+<div id="outline-container-8c2c061c" class="outline-3">
+<h3 id="8c2c061c">데이터베이스 목록 보기(List Databases)</h3>
+<div class="outline-text-3" id="text-8c2c061c">
 <p>
 데이터베이스 이름이 기억나지 않아서 검색해야 될 때는 아래 커맨드를 사용할 수 있다.
 </p>
@@ -178,9 +169,9 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7b3cffc" class="outline-3">
-<h3 id="org7b3cffc">컬렉션 조회(List Collections)</h3>
-<div class="outline-text-3" id="text-org7b3cffc">
+<div id="outline-container-53e364c2" class="outline-3">
+<h3 id="53e364c2">컬렉션 조회(List Collections)</h3>
+<div class="outline-text-3" id="text-53e364c2">
 <p>
 컬렉션 조회는 아래처럼 전용 명령어가 있다.
 </p>
@@ -190,9 +181,9 @@ dbname 은 생략할 수 있다.
 </div>
 </div>
 </div>
-<div id="outline-container-org0d77c2b" class="outline-3">
-<h3 id="org0d77c2b">삽입(Insert)</h3>
-<div class="outline-text-3" id="text-org0d77c2b">
+<div id="outline-container-53a39d6b" class="outline-3">
+<h3 id="53a39d6b">삽입(Insert)</h3>
+<div class="outline-text-3" id="text-53a39d6b">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.insert({key: value, ...})
 </pre>
@@ -202,9 +193,9 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc0899de" class="outline-3">
-<h3 id="orgc0899de">조회(Find or Query)</h3>
-<div class="outline-text-3" id="text-orgc0899de">
+<div id="outline-container-a3a785b1" class="outline-3">
+<h3 id="a3a785b1">조회(Find or Query)</h3>
+<div class="outline-text-3" id="text-a3a785b1">
 <p>
 다른 DBMS에서는 쿼리라 부르는 것과 동일하게 검색 혹은 조회하는 기능은 <code>find</code> 명령을 사용한다.
 </p>
@@ -217,9 +208,9 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org04ccbe4" class="outline-3">
-<h3 id="org04ccbe4">수정(Update)</h3>
-<div class="outline-text-3" id="text-org04ccbe4">
+<div id="outline-container-70150b85" class="outline-3">
+<h3 id="70150b85">수정(Update)</h3>
+<div class="outline-text-3" id="text-70150b85">
 <p>
 특정 도큐먼트의 특정 필드를 업데이트 하는 방법은 아래와 같은 식이다.
 </p>
@@ -239,9 +230,9 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfc7ea13" class="outline-3">
-<h3 id="orgfc7ea13">삭제(Remove)</h3>
-<div class="outline-text-3" id="text-orgfc7ea13">
+<div id="outline-container-6f54276a" class="outline-3">
+<h3 id="6f54276a">삭제(Remove)</h3>
+<div class="outline-text-3" id="text-6f54276a">
 <p>
 특정 도큐먼트를 검색해서 삭제하는 방법은 아래와 같다.
 </p>
@@ -255,13 +246,13 @@ dbname 은 생략할 수 있다.
 </div>
 </div>
 </div>
-<div id="outline-container-org8829dff" class="outline-2">
-<h2 id="org8829dff">검색 관련 정보</h2>
-<div class="outline-text-2" id="text-org8829dff">
+<div id="outline-container-ad536c52" class="outline-2">
+<h2 id="ad536c52">검색 관련 정보</h2>
+<div class="outline-text-2" id="text-ad536c52">
 </div>
-<div id="outline-container-org004edf0" class="outline-3">
-<h3 id="org004edf0">정렬, 위치, 갯수 제한</h3>
-<div class="outline-text-3" id="text-org004edf0">
+<div id="outline-container-c79a4779" class="outline-3">
+<h3 id="c79a4779">정렬, 위치, 갯수 제한</h3>
+<div class="outline-text-3" id="text-c79a4779">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: value, ...})
              .sort({field: -<span style="color: #da8548; font-weight: bold;">1</span>})
@@ -276,9 +267,9 @@ dbname 은 생략할 수 있다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgf669092" class="outline-3">
-<h3 id="orgf669092">수치 비교</h3>
-<div class="outline-text-3" id="text-orgf669092">
+<div id="outline-container-99215271" class="outline-3">
+<h3 id="99215271">수치 비교</h3>
+<div class="outline-text-3" id="text-99215271">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$gt: <span style="color: #da8548; font-weight: bold;">10</span>}})
 </pre>
@@ -295,9 +286,9 @@ dbname 은 생략할 수 있다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org7cee3c5" class="outline-3">
-<h3 id="org7cee3c5">특정 필드 표시하지 않기</h3>
-<div class="outline-text-3" id="text-org7cee3c5">
+<div id="outline-container-b9801a35" class="outline-3">
+<h3 id="b9801a35">특정 필드 표시하지 않기</h3>
+<div class="outline-text-3" id="text-b9801a35">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: value, ...},
                    {keyToHide: <span style="color: #da8548; font-weight: bold;">0</span>})
@@ -309,9 +300,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-orgfe7fec0" class="outline-3">
-<h3 id="orgfe7fec0">특정 필드가 있는 도큐먼트 검색하기</h3>
-<div class="outline-text-3" id="text-orgfe7fec0">
+<div id="outline-container-16c291bf" class="outline-3">
+<h3 id="16c291bf">특정 필드가 있는 도큐먼트 검색하기</h3>
+<div class="outline-text-3" id="text-16c291bf">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$exists: <span style="color: #a9a1e1;">true</span>}})
 </pre>
@@ -322,9 +313,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-org8143804" class="outline-3">
-<h3 id="org8143804">Not Null</h3>
-<div class="outline-text-3" id="text-org8143804">
+<div id="outline-container-36f48b7e" class="outline-3">
+<h3 id="36f48b7e">Not Null</h3>
+<div class="outline-text-3" id="text-36f48b7e">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$ne: <span style="color: #a9a1e1;">null</span>}})
 </pre>
@@ -335,9 +326,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </div>
 </div>
 </div>
-<div id="outline-container-orgce7cb88" class="outline-2">
-<h2 id="orgce7cb88">어그리게이트(Aggregate)</h2>
-<div class="outline-text-2" id="text-orgce7cb88">
+<div id="outline-container-53388390" class="outline-2">
+<h2 id="53388390">어그리게이트(Aggregate)</h2>
+<div class="outline-text-2" id="text-53388390">
 <p>
 어그리게이트는 도큐먼트를 파이프 라인을 통해
 여러 차례에 걸쳐서 처리할 수 있도록 하는 특수한 기능이다.
@@ -345,9 +336,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 이걸 결과로 넘기는 식이 일렬로 처리되는 것과 비슷하다.
 </p>
 </div>
-<div id="outline-container-orgfd53339" class="outline-3">
-<h3 id="orgfd53339">기초</h3>
-<div class="outline-text-3" id="text-orgfd53339">
+<div id="outline-container-ce62569d" class="outline-3">
+<h3 id="ce62569d">기초</h3>
+<div class="outline-text-3" id="text-ce62569d">
 <p>
 어그리게이트의 기본 문법은 아래와 같다.
 </p>
@@ -362,9 +353,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-org09b42d2" class="outline-3">
-<h3 id="org09b42d2">예제</h3>
-<div class="outline-text-3" id="text-org09b42d2">
+<div id="outline-container-b313bf06" class="outline-3">
+<h3 id="b313bf06">예제</h3>
+<div class="outline-text-3" id="text-b313bf06">
 <div class="org-src-container">
 <pre class="src src-text">db.user.aggregate([
     {$match:
@@ -397,9 +388,9 @@ user라는 컬렉션에서 2000년 이후로 가입한 사람들만 간추려서
 </p>
 </div>
 </div>
-<div id="outline-container-orge5776e0" class="outline-3">
-<h3 id="orge5776e0">몇 가지 유용한 파이프라인 오퍼레이터</h3>
-<div class="outline-text-3" id="text-orge5776e0">
+<div id="outline-container-0ebf0862" class="outline-3">
+<h3 id="0ebf0862">몇 가지 유용한 파이프라인 오퍼레이터</h3>
+<div class="outline-text-3" id="text-0ebf0862">
 <dl class="org-dl">
 <dt><code>$match</code></dt><dd>필터 혹은 쿼리(find와 비슷)</dd>
 <dt><code>$group</code></dt><dd>특정한 필드를 기준으로 모으기(grouping)</dd>
@@ -424,13 +415,13 @@ Pipeline Stages</a> 문서를 참고해보자.
 </div>
 </div>
 </div>
-<div id="outline-container-orge5efd40" class="outline-2">
-<h2 id="orge5efd40">백업 및 복원(Dump and Restore)</h2>
-<div class="outline-text-2" id="text-orge5efd40">
+<div id="outline-container-83ac97a9" class="outline-2">
+<h2 id="83ac97a9">백업 및 복원(Dump and Restore)</h2>
+<div class="outline-text-2" id="text-83ac97a9">
 </div>
-<div id="outline-container-org6937416" class="outline-3">
-<h3 id="org6937416">백업(Dump)</h3>
-<div class="outline-text-3" id="text-org6937416">
+<div id="outline-container-3eb0e193" class="outline-3">
+<h3 id="3eb0e193">백업(Dump)</h3>
+<div class="outline-text-3" id="text-3eb0e193">
 <p>
 아래 예제는 host.foo.bar 라는 DB 서버에서 dbName 이라는 데이터베이스의 collectionName 이라는 컬렉션 중
 key의 값이 value인 도큐먼트만 골라서 /foo/bar/dump/directory 라는 디렉터리에 백업하는 명령이다.
@@ -450,9 +441,9 @@ key의 값이 value인 도큐먼트만 골라서 /foo/bar/dump/directory 라는 
 </p>
 </div>
 </div>
-<div id="outline-container-orga3f2ac6" class="outline-3">
-<h3 id="orga3f2ac6">복원(Restore)</h3>
-<div class="outline-text-3" id="text-orga3f2ac6">
+<div id="outline-container-f29526fa" class="outline-3">
+<h3 id="f29526fa">복원(Restore)</h3>
+<div class="outline-text-3" id="text-f29526fa">
 <p>
 복원할 때는 백업할 때 사용했던 디렉터리를 입력으로 넣어주면 된다.
 </p>
@@ -467,13 +458,13 @@ key의 값이 value인 도큐먼트만 골라서 /foo/bar/dump/directory 라는 
 </div>
 </div>
 </div>
-<div id="outline-container-orgcaa4c73" class="outline-2">
-<h2 id="orgcaa4c73">기타</h2>
-<div class="outline-text-2" id="text-orgcaa4c73">
+<div id="outline-container-7f598db0" class="outline-2">
+<h2 id="7f598db0">기타</h2>
+<div class="outline-text-2" id="text-7f598db0">
 </div>
-<div id="outline-container-orgbce4be2" class="outline-3">
-<h3 id="orgbce4be2">컬렉션 몽땅 비우기(지우기)</h3>
-<div class="outline-text-3" id="text-orgbce4be2">
+<div id="outline-container-68dde1d3" class="outline-3">
+<h3 id="68dde1d3">컬렉션 몽땅 비우기(지우기)</h3>
+<div class="outline-text-3" id="text-68dde1d3">
 <p>
 삭제 커맨드에 별 다른 조건을 주지 않으면 당연히 몽땅 지워져 버린다.
 </p>
@@ -486,9 +477,9 @@ key의 값이 value인 도큐먼트만 골라서 /foo/bar/dump/directory 라는 
 </p>
 </div>
 </div>
-<div id="outline-container-org5e520d1" class="outline-3">
-<h3 id="org5e520d1">Replica Set 에서 Primary 바꾸기</h3>
-<div class="outline-text-3" id="text-org5e520d1">
+<div id="outline-container-9bf0a0cc" class="outline-3">
+<h3 id="9bf0a0cc">Replica Set 에서 Primary 바꾸기</h3>
+<div class="outline-text-3" id="text-9bf0a0cc">
 <p>
 삽질로 알아낸 정보라 이 방법 외에 다른 방법이 있을 수도 있음을 먼저 알린다.
 </p>
