--- a/note/pngquant.html
+++ b/note/pngquant.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,9 +61,9 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org73042af">설치</a></li>
-<li><a href="#org595ae4e">사용법</a></li>
-<li><a href="#org1ce1de6">외부 링크</a></li>
+<li><a href="#f6c3e57e">설치</a></li>
+<li><a href="#f31a3a78">사용법</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -83,9 +74,9 @@ pngquant는 PNG 이미지 포맷을 압축하는 오픈소스 <a href="cli.html"
 파괴 압축(lossy compression)을 하는 것으로 추정한다.
 </p>
 
-<div id="outline-container-org73042af" class="outline-2">
-<h2 id="org73042af">설치</h2>
-<div class="outline-text-2" id="text-org73042af">
+<div id="outline-container-f6c3e57e" class="outline-2">
+<h2 id="f6c3e57e">설치</h2>
+<div class="outline-text-2" id="text-f6c3e57e">
 <p>
 <a href="macos.html">macOS</a>에서는 <a href="homebrew.html">Homebrew</a>로 쉽게 설치할 수 있다.
 </p>
@@ -98,9 +89,9 @@ pngquant는 PNG 이미지 포맷을 압축하는 오픈소스 <a href="cli.html"
 </p>
 </div>
 </div>
-<div id="outline-container-org595ae4e" class="outline-2">
-<h2 id="org595ae4e">사용법</h2>
-<div class="outline-text-2" id="text-org595ae4e">
+<div id="outline-container-f31a3a78" class="outline-2">
+<h2 id="f31a3a78">사용법</h2>
+<div class="outline-text-2" id="text-f31a3a78">
 <p>
 단순히 이미지 파일을 인자로 넘기면 압축해 준다.
 </p>
@@ -140,9 +131,9 @@ fs8 이라는 이름은 압축 방식과 관련된 이름으로 추측된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org1ce1de6" class="outline-2">
-<h2 id="org1ce1de6">외부 링크</h2>
-<div class="outline-text-2" id="text-org1ce1de6">
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://pngquant.org/">🌏pngquant 공식 사이트</a></li>
 </ul>
