--- a/note/sh.html
+++ b/note/sh.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,27 +61,27 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgab8a35b">소개</a></li>
-<li><a href="#org47e3172">스크립팅 노트</a>
+<li><a href="#2cc02e22">소개</a></li>
+<li><a href="#55202749">스크립팅 노트</a>
 <ul>
-<li><a href="#org84f023d">실행 가능한 스크립트</a></li>
-<li><a href="#org5037e35">if</a></li>
-<li><a href="#org0aea08f">루프</a></li>
-<li><a href="#orge400f05">조건식 오퍼레이터</a></li>
-<li><a href="#orgde04e6b">디렉토리 존재 유무 체크</a></li>
-<li><a href="#orgb77a9cd">파일 개수</a></li>
-<li><a href="#orga77ac06">와일드카드 인자 처리</a></li>
-<li><a href="#org7ce9806">에러가 나면 멈추게 하기</a></li>
-<li><a href="#orge67ca8c">에러 메시지 숨기기</a></li>
+<li><a href="#e9c2a28a">실행 가능한 스크립트</a></li>
+<li><a href="#39c8942e">if</a></li>
+<li><a href="#8378a9a9">루프</a></li>
+<li><a href="#86e6abb0">조건식 오퍼레이터</a></li>
+<li><a href="#57411cf4">디렉토리 존재 유무 체크</a></li>
+<li><a href="#8b56bf6a">파일 개수</a></li>
+<li><a href="#d4572cbf">와일드카드 인자 처리</a></li>
+<li><a href="#f73ca4bc">에러가 나면 멈추게 하기</a></li>
+<li><a href="#1c0617b6">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgab8a35b" class="outline-2">
-<h2 id="orgab8a35b">소개</h2>
-<div class="outline-text-2" id="text-orgab8a35b">
+<div id="outline-container-2cc02e22" class="outline-2">
+<h2 id="2cc02e22">소개</h2>
+<div class="outline-text-2" id="text-2cc02e22">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -99,16 +90,16 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org47e3172" class="outline-2">
-<h2 id="org47e3172">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-org47e3172">
+<div id="outline-container-55202749" class="outline-2">
+<h2 id="55202749">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-55202749">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-org84f023d" class="outline-3">
-<h3 id="org84f023d">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-org84f023d">
+<div id="outline-container-e9c2a28a" class="outline-3">
+<h3 id="e9c2a28a">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-e9c2a28a">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -169,9 +160,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org5037e35" class="outline-3">
-<h3 id="org5037e35">if</h3>
-<div class="outline-text-3" id="text-org5037e35">
+<div id="outline-container-39c8942e" class="outline-3">
+<h3 id="39c8942e">if</h3>
+<div class="outline-text-3" id="text-39c8942e">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -210,9 +201,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org0aea08f" class="outline-3">
-<h3 id="org0aea08f">루프</h3>
-<div class="outline-text-3" id="text-org0aea08f">
+<div id="outline-container-8378a9a9" class="outline-3">
+<h3 id="8378a9a9">루프</h3>
+<div class="outline-text-3" id="text-8378a9a9">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -229,9 +220,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge400f05" class="outline-3">
-<h3 id="orge400f05">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-orge400f05">
+<div id="outline-container-86e6abb0" class="outline-3">
+<h3 id="86e6abb0">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-86e6abb0">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -246,9 +237,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgde04e6b" class="outline-3">
-<h3 id="orgde04e6b">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-orgde04e6b">
+<div id="outline-container-57411cf4" class="outline-3">
+<h3 id="57411cf4">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-57411cf4">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -263,9 +254,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgb77a9cd" class="outline-3">
-<h3 id="orgb77a9cd">파일 개수</h3>
-<div class="outline-text-3" id="text-orgb77a9cd">
+<div id="outline-container-8b56bf6a" class="outline-3">
+<h3 id="8b56bf6a">파일 개수</h3>
+<div class="outline-text-3" id="text-8b56bf6a">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -289,9 +280,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orga77ac06" class="outline-3">
-<h3 id="orga77ac06">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-orga77ac06">
+<div id="outline-container-d4572cbf" class="outline-3">
+<h3 id="d4572cbf">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-d4572cbf">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -309,9 +300,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org7ce9806" class="outline-3">
-<h3 id="org7ce9806">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-org7ce9806">
+<div id="outline-container-f73ca4bc" class="outline-3">
+<h3 id="f73ca4bc">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-f73ca4bc">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -321,9 +312,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orge67ca8c" class="outline-3">
-<h3 id="orge67ca8c">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-orge67ca8c">
+<div id="outline-container-1c0617b6" class="outline-3">
+<h3 id="1c0617b6">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-1c0617b6">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
