--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -163,9 +154,9 @@
 </tbody>
 </table>
 
-<div id="outline-container-orgdbe7bef" class="outline-2">
-<h2 id="orgdbe7bef">참고</h2>
-<div class="outline-text-2" id="text-orgdbe7bef">
+<div id="outline-container-e857bc27" class="outline-2">
+<h2 id="e857bc27">참고</h2>
+<div class="outline-text-2" id="text-e857bc27">
 <ul class="org-ul">
 <li>Apostrophe와 작은 따옴표는 원래 용도가 다르다.
 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</li>
