--- a/note/temp-name.html
+++ b/note/temp-name.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,8 +61,8 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc762b2e">Foobar 스타일</a></li>
-<li><a href="#org726ad10">i</a></li>
+<li><a href="#57e99af7">Foobar 스타일</a></li>
+<li><a href="#865c0c0b">i</a></li>
 </ul>
 </div>
 </div>
@@ -80,9 +71,9 @@
 이 글을 쓰는 이의 특성(?) 상 주로 프로그래밍에 관련된 내용이라고 생각하자.
 </p>
 
-<div id="outline-container-orgc762b2e" class="outline-2">
-<h2 id="orgc762b2e">Foobar 스타일</h2>
-<div class="outline-text-2" id="text-orgc762b2e">
+<div id="outline-container-57e99af7" class="outline-2">
+<h2 id="57e99af7">Foobar 스타일</h2>
+<div class="outline-text-2" id="text-57e99af7">
 <p>
 영국이나 미국 등의 영어 권에서 자주 쓰이며
 foo - bar 로 시작하기 때문에 이를 붙여서 foobar 형태라고 부르는 것 같다.
@@ -111,9 +102,9 @@ foo - bar 로 시작하기 때문에 이를 붙여서 foobar 형태라고 부르
 </ul>
 </div>
 </div>
-<div id="outline-container-org726ad10" class="outline-2">
-<h2 id="org726ad10">i</h2>
-<div class="outline-text-2" id="text-org726ad10">
+<div id="outline-container-865c0c0b" class="outline-2">
+<h2 id="865c0c0b">i</h2>
+<div class="outline-text-2" id="text-865c0c0b">
 <p>
 프로그래밍에서 변수의 이름을 짓는 것은 상당히 중요한 일이나 특정 상황에서 우리는 예외적인 관습을 많이 만들어 왔다.
 그 중 대표적인 것이 바로 <code>i</code> 다.
