--- a/note/userdefaults.html
+++ b/note/userdefaults.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,9 +61,9 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga4ab0d2">설정 저장하기</a></li>
-<li><a href="#org4192e24">설정 읽어오기</a></li>
-<li><a href="#org38f88e2">synchronize()</a></li>
+<li><a href="#797067fe">설정 저장하기</a></li>
+<li><a href="#2cc85383">설정 읽어오기</a></li>
+<li><a href="#d7372269">synchronize()</a></li>
 </ul>
 </div>
 </div>
@@ -98,9 +89,9 @@ UserDefaults 혹은 NSUserDefaults 는 <a href="ios.html">iOS</a> 나 <a href="m
 복잡하거나 큰 데이터는 이 저장소에 어울리지 않으니 별도의 DB나 Core Data를 활용하자.
 </p>
 
-<div id="outline-container-orga4ab0d2" class="outline-2">
-<h2 id="orga4ab0d2">설정 저장하기</h2>
-<div class="outline-text-2" id="text-orga4ab0d2">
+<div id="outline-container-797067fe" class="outline-2">
+<h2 id="797067fe">설정 저장하기</h2>
+<div class="outline-text-2" id="text-797067fe">
 <p>
 아래 예제는 age 라는 키의 값을 27로 저장하는 예제다.
 </p>
@@ -118,9 +109,9 @@ UserDefaults 혹은 NSUserDefaults 는 <a href="ios.html">iOS</a> 나 <a href="m
 </p>
 </div>
 </div>
-<div id="outline-container-org4192e24" class="outline-2">
-<h2 id="org4192e24">설정 읽어오기</h2>
-<div class="outline-text-2" id="text-org4192e24">
+<div id="outline-container-2cc85383" class="outline-2">
+<h2 id="2cc85383">설정 읽어오기</h2>
+<div class="outline-text-2" id="text-2cc85383">
 <p>
 읽을 때는 타입에 신경을 쓰는 편이 좋다.
 </p>
@@ -144,9 +135,9 @@ UserDefaults 혹은 NSUserDefaults 는 <a href="ios.html">iOS</a> 나 <a href="m
 </p>
 </div>
 </div>
-<div id="outline-container-org38f88e2" class="outline-2">
-<h2 id="org38f88e2">synchronize()</h2>
-<div class="outline-text-2" id="text-org38f88e2">
+<div id="outline-container-d7372269" class="outline-2">
+<h2 id="d7372269">synchronize()</h2>
+<div class="outline-text-2" id="text-d7372269">
 <p>
 결론부터 말하자면 이 메서드는 이제 잊어도 된다.
 </p>
