--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,12 +61,12 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf440813">단축키</a>
+<li><a href="#cedae0c3">단축키</a>
 <ul>
-<li><a href="#orgb285e9e">프로젝트(Project)</a></li>
-<li><a href="#org4a1cd5a">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#org9217e10">타임라인(Timeline)</a></li>
-<li><a href="#org040258b">플레이(Play or Preview)</a></li>
+<li><a href="#e7e9fcd0">프로젝트(Project)</a></li>
+<li><a href="#cfef5cf3">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#e7bec45b">타임라인(Timeline)</a></li>
+<li><a href="#6b7dd08c">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -87,13 +78,13 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-orgf440813" class="outline-2">
-<h2 id="orgf440813">단축키</h2>
-<div class="outline-text-2" id="text-orgf440813">
+<div id="outline-container-cedae0c3" class="outline-2">
+<h2 id="cedae0c3">단축키</h2>
+<div class="outline-text-2" id="text-cedae0c3">
 </div>
-<div id="outline-container-orgb285e9e" class="outline-3">
-<h3 id="orgb285e9e">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-orgb285e9e">
+<div id="outline-container-e7e9fcd0" class="outline-3">
+<h3 id="e7e9fcd0">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-e7e9fcd0">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -102,9 +93,9 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 </dl>
 </div>
 </div>
-<div id="outline-container-org4a1cd5a" class="outline-3">
-<h3 id="org4a1cd5a">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-org4a1cd5a">
+<div id="outline-container-cfef5cf3" class="outline-3">
+<h3 id="cfef5cf3">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-cfef5cf3">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -119,9 +110,9 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 </dl>
 </div>
 </div>
-<div id="outline-container-org9217e10" class="outline-3">
-<h3 id="org9217e10">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-org9217e10">
+<div id="outline-container-e7bec45b" class="outline-3">
+<h3 id="e7bec45b">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-e7bec45b">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -146,9 +137,9 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 </dl>
 </div>
 </div>
-<div id="outline-container-org040258b" class="outline-3">
-<h3 id="org040258b">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-org040258b">
+<div id="outline-container-6b7dd08c" class="outline-3">
+<h3 id="6b7dd08c">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-6b7dd08c">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
