--- a/note/find.html
+++ b/note/find.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,14 +61,14 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga93c8f9">기본 사용법</a>
+<li><a href="#88804751">기본 사용법</a>
 <ul>
-<li><a href="#orgbe06b97">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org2e0c425">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#orgab703a7">검색 패턴</a></li>
-<li><a href="#orgff4e2ec">대소문자 무시하기</a></li>
-<li><a href="#org8170034">검색 종류 지정하기</a></li>
-<li><a href="#org2f03a8b">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#38df4ee5">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#91b5439d">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#37bb9b27">검색 패턴</a></li>
+<li><a href="#0c90403c">대소문자 무시하기</a></li>
+<li><a href="#ec6d2f3a">검색 종류 지정하기</a></li>
+<li><a href="#49f9383f">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -88,13 +79,13 @@
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orga93c8f9" class="outline-2">
-<h2 id="orga93c8f9">기본 사용법</h2>
-<div class="outline-text-2" id="text-orga93c8f9">
+<div id="outline-container-88804751" class="outline-2">
+<h2 id="88804751">기본 사용법</h2>
+<div class="outline-text-2" id="text-88804751">
 </div>
-<div id="outline-container-orgbe06b97" class="outline-3">
-<h3 id="orgbe06b97">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-orgbe06b97">
+<div id="outline-container-38df4ee5" class="outline-3">
+<h3 id="38df4ee5">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-38df4ee5">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -106,9 +97,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org2e0c425" class="outline-3">
-<h3 id="org2e0c425">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org2e0c425">
+<div id="outline-container-91b5439d" class="outline-3">
+<h3 id="91b5439d">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-91b5439d">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -118,9 +109,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgab703a7" class="outline-3">
-<h3 id="orgab703a7">검색 패턴</h3>
-<div class="outline-text-3" id="text-orgab703a7">
+<div id="outline-container-37bb9b27" class="outline-3">
+<h3 id="37bb9b27">검색 패턴</h3>
+<div class="outline-text-3" id="text-37bb9b27">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -133,9 +124,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgff4e2ec" class="outline-3">
-<h3 id="orgff4e2ec">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-orgff4e2ec">
+<div id="outline-container-0c90403c" class="outline-3">
+<h3 id="0c90403c">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-0c90403c">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -146,9 +137,9 @@
 </div>
 </div>
 </div>
-<div id="outline-container-org8170034" class="outline-3">
-<h3 id="org8170034">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-org8170034">
+<div id="outline-container-ec6d2f3a" class="outline-3">
+<h3 id="ec6d2f3a">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-ec6d2f3a">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -166,9 +157,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org2f03a8b" class="outline-3">
-<h3 id="org2f03a8b">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-org2f03a8b">
+<div id="outline-container-49f9383f" class="outline-3">
+<h3 id="49f9383f">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-49f9383f">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
