--- a/note/grep.html
+++ b/note/grep.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,16 +61,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgea6e1ec">기본 사용법</a></li>
-<li><a href="#org03b9469">대소문자 무시</a></li>
-<li><a href="#org80cf06b">바이너리(Binary) 파일 무시하기</a></li>
-<li><a href="#org04fe265">재귀(Recursive) 검색</a></li>
-<li><a href="#org1303a06">검색된 파일 이름만 보기</a></li>
-<li><a href="#orgd812516">단어만 검색하기</a></li>
-<li><a href="#org39c6eb9">줄 번호(Line Number) 보기</a></li>
-<li><a href="#org0368a93">발견 개수 보기</a></li>
-<li><a href="#org0e7d72f">검색되지 않는 것만 보기</a></li>
-<li><a href="#orgff16595">정규표현식</a></li>
+<li><a href="#88804751">기본 사용법</a></li>
+<li><a href="#20931f5e">대소문자 무시</a></li>
+<li><a href="#337033bc">바이너리(Binary) 파일 무시하기</a></li>
+<li><a href="#64856c7a">재귀(Recursive) 검색</a></li>
+<li><a href="#9f00ed3b">검색된 파일 이름만 보기</a></li>
+<li><a href="#7d75f9e3">단어만 검색하기</a></li>
+<li><a href="#402e41ba">줄 번호(Line Number) 보기</a></li>
+<li><a href="#56fcaac3">발견 개수 보기</a></li>
+<li><a href="#abaf8df6">검색되지 않는 것만 보기</a></li>
+<li><a href="#0d80910c">정규표현식</a></li>
 </ul>
 </div>
 </div>
@@ -87,9 +78,9 @@
 Grep은 파일이나 텍스트에서 특정 텍스트를 검색하는 데 사용되는 *NIX <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orgea6e1ec" class="outline-2">
-<h2 id="orgea6e1ec">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgea6e1ec">
+<div id="outline-container-88804751" class="outline-2">
+<h2 id="88804751">기본 사용법</h2>
+<div class="outline-text-2" id="text-88804751">
 <p>
 기본적으로는 텍스트 파일에서 문자열을 검색하는 것을 생각할 수 있다.
 </p>
@@ -116,9 +107,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org03b9469" class="outline-2">
-<h2 id="org03b9469">대소문자 무시</h2>
-<div class="outline-text-2" id="text-org03b9469">
+<div id="outline-container-20931f5e" class="outline-2">
+<h2 id="20931f5e">대소문자 무시</h2>
+<div class="outline-text-2" id="text-20931f5e">
 <p>
 <code>-i</code> 옵션을 사용하면 대소문자를 가리지 않고 검색한다.
 </p>
@@ -128,9 +119,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-org80cf06b" class="outline-2">
-<h2 id="org80cf06b">바이너리(Binary) 파일 무시하기</h2>
-<div class="outline-text-2" id="text-org80cf06b">
+<div id="outline-container-337033bc" class="outline-2">
+<h2 id="337033bc">바이너리(Binary) 파일 무시하기</h2>
+<div class="outline-text-2" id="text-337033bc">
 <p>
 가끔 이진 파일에서 검색하느라 느려지거나 이상한 것을 검색하기도 하는데, 이를 때는 <code>-I</code> 옵션을 사용할 수 있다.
 </p>
@@ -140,9 +131,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-org04fe265" class="outline-2">
-<h2 id="org04fe265">재귀(Recursive) 검색</h2>
-<div class="outline-text-2" id="text-org04fe265">
+<div id="outline-container-64856c7a" class="outline-2">
+<h2 id="64856c7a">재귀(Recursive) 검색</h2>
+<div class="outline-text-2" id="text-64856c7a">
 <p>
 재귀 검색이란 하위 디렉터리를 모두 다 뒤져본다는 의미다.
 </p>
@@ -168,9 +159,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org1303a06" class="outline-2">
-<h2 id="org1303a06">검색된 파일 이름만 보기</h2>
-<div class="outline-text-2" id="text-org1303a06">
+<div id="outline-container-9f00ed3b" class="outline-2">
+<h2 id="9f00ed3b">검색된 파일 이름만 보기</h2>
+<div class="outline-text-2" id="text-9f00ed3b">
 <p>
 <code>-l</code> 옵션은 발견된 패턴을 화면에 표시하지 않게 한다.
 </p>
@@ -185,9 +176,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgd812516" class="outline-2">
-<h2 id="orgd812516">단어만 검색하기</h2>
-<div class="outline-text-2" id="text-orgd812516">
+<div id="outline-container-7d75f9e3" class="outline-2">
+<h2 id="7d75f9e3">단어만 검색하기</h2>
+<div class="outline-text-2" id="text-7d75f9e3">
 <p>
 단어 단위 검색을 하기 위해서 <code>-w</code> 옵션을 사용할 수 있다.
 </p>
@@ -200,9 +191,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org39c6eb9" class="outline-2">
-<h2 id="org39c6eb9">줄 번호(Line Number) 보기</h2>
-<div class="outline-text-2" id="text-org39c6eb9">
+<div id="outline-container-402e41ba" class="outline-2">
+<h2 id="402e41ba">줄 번호(Line Number) 보기</h2>
+<div class="outline-text-2" id="text-402e41ba">
 <p>
 <code>-n</code> 옵션을 이용해 줄 번호를 표시할 수 있다.
 </p>
@@ -215,9 +206,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org0368a93" class="outline-2">
-<h2 id="org0368a93">발견 개수 보기</h2>
-<div class="outline-text-2" id="text-org0368a93">
+<div id="outline-container-56fcaac3" class="outline-2">
+<h2 id="56fcaac3">발견 개수 보기</h2>
+<div class="outline-text-2" id="text-56fcaac3">
 <p>
 <code>-c</code> 옵션을 주면 발견된 개수(count)를 구할 수 있다.
 </p>
@@ -230,9 +221,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org0e7d72f" class="outline-2">
-<h2 id="org0e7d72f">검색되지 않는 것만 보기</h2>
-<div class="outline-text-2" id="text-org0e7d72f">
+<div id="outline-container-abaf8df6" class="outline-2">
+<h2 id="abaf8df6">검색되지 않는 것만 보기</h2>
+<div class="outline-text-2" id="text-abaf8df6">
 <p>
 <code>-v</code> 옵션을 주면 검색되지 않는 라인을 화면에 표시한다.
 </p>
@@ -245,9 +236,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgff16595" class="outline-2">
-<h2 id="orgff16595">정규표현식</h2>
-<div class="outline-text-2" id="text-orgff16595">
+<div id="outline-container-0d80910c" class="outline-2">
+<h2 id="0d80910c">정규표현식</h2>
+<div class="outline-text-2" id="text-0d80910c">
 <p>
 원래 정규표현식이 지원되지 때문에 그냥 써도 된다.
 </p>
