--- a/note/javascript.html
+++ b/note/javascript.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,23 +61,23 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org897070f">노트</a>
+<li><a href="#e352cada">노트</a>
 <ul>
-<li><a href="#org71506dc">모듈(Module)</a></li>
-<li><a href="#org008a8ad">스프레드(Spreads) 연산자</a></li>
-<li><a href="#orgca2efc2">튜플 비슷한 문법</a></li>
+<li><a href="#4bf4b92b">모듈(Module)</a></li>
+<li><a href="#2d495506">스프레드(Spreads) 연산자</a></li>
+<li><a href="#811ee247">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#orge3aeedc">실전(?) 메모</a>
+<li><a href="#880b2f19">실전(?) 메모</a>
 <ul>
-<li><a href="#orgd1a4e2b">요소 얻기</a></li>
-<li><a href="#orga50e3cc">특정 블록에 HTML 넣기</a></li>
-<li><a href="#org2e84cd3">콘텐츠 높이 구하기</a></li>
-<li><a href="#orgadebc8f">특정 태그 앞에 요소 넣기</a></li>
-<li><a href="#orgcc826b8">forEach</a></li>
+<li><a href="#931c4cd5">요소 얻기</a></li>
+<li><a href="#4d3ccdfc">특정 블록에 HTML 넣기</a></li>
+<li><a href="#5c40f76c">콘텐츠 높이 구하기</a></li>
+<li><a href="#8c91cb46">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#30eb5001">forEach</a></li>
 </ul>
 </li>
-<li><a href="#org43563f0">외부 링크</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -104,13 +95,13 @@
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-org897070f" class="outline-2">
-<h2 id="org897070f">노트</h2>
-<div class="outline-text-2" id="text-org897070f">
+<div id="outline-container-e352cada" class="outline-2">
+<h2 id="e352cada">노트</h2>
+<div class="outline-text-2" id="text-e352cada">
 </div>
-<div id="outline-container-org71506dc" class="outline-3">
-<h3 id="org71506dc">모듈(Module)</h3>
-<div class="outline-text-3" id="text-org71506dc">
+<div id="outline-container-4bf4b92b" class="outline-3">
+<h3 id="4bf4b92b">모듈(Module)</h3>
+<div class="outline-text-3" id="text-4bf4b92b">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -162,9 +153,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org008a8ad" class="outline-3">
-<h3 id="org008a8ad">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org008a8ad">
+<div id="outline-container-2d495506" class="outline-3">
+<h3 id="2d495506">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-2d495506">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -227,9 +218,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgca2efc2" class="outline-3">
-<h3 id="orgca2efc2">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-orgca2efc2">
+<div id="outline-container-811ee247" class="outline-3">
+<h3 id="811ee247">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-811ee247">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -241,13 +232,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-orge3aeedc" class="outline-2">
-<h2 id="orge3aeedc">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-orge3aeedc">
+<div id="outline-container-880b2f19" class="outline-2">
+<h2 id="880b2f19">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-880b2f19">
 </div>
-<div id="outline-container-orgd1a4e2b" class="outline-3">
-<h3 id="orgd1a4e2b">요소 얻기</h3>
-<div class="outline-text-3" id="text-orgd1a4e2b">
+<div id="outline-container-931c4cd5" class="outline-3">
+<h3 id="931c4cd5">요소 얻기</h3>
+<div class="outline-text-3" id="text-931c4cd5">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -259,9 +250,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orga50e3cc" class="outline-3">
-<h3 id="orga50e3cc">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-orga50e3cc">
+<div id="outline-container-4d3ccdfc" class="outline-3">
+<h3 id="4d3ccdfc">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-4d3ccdfc">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -271,9 +262,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-org2e84cd3" class="outline-3">
-<h3 id="org2e84cd3">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-org2e84cd3">
+<div id="outline-container-5c40f76c" class="outline-3">
+<h3 id="5c40f76c">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-5c40f76c">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -293,9 +284,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orgadebc8f" class="outline-3">
-<h3 id="orgadebc8f">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-orgadebc8f">
+<div id="outline-container-8c91cb46" class="outline-3">
+<h3 id="8c91cb46">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-8c91cb46">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -321,9 +312,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </p>
 </div>
 </div>
-<div id="outline-container-orgcc826b8" class="outline-3">
-<h3 id="orgcc826b8">forEach</h3>
-<div class="outline-text-3" id="text-orgcc826b8">
+<div id="outline-container-30eb5001" class="outline-3">
+<h3 id="30eb5001">forEach</h3>
+<div class="outline-text-3" id="text-30eb5001">
 <div class="org-src-container">
 <pre class="src src-javascript">&gt; [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>, <span style="color: #da8548; font-weight: bold;">3</span>, <span style="color: #da8548; font-weight: bold;">4</span>, <span style="color: #da8548; font-weight: bold;">5</span>].forEach((e) =&gt; console.log(e))
 <span style="color: #da8548; font-weight: bold;">1</span>
@@ -367,9 +358,9 @@ Array.from(elements).forEach((e) =&gt; { ... })
 </div>
 </div>
 </div>
-<div id="outline-container-org43563f0" class="outline-2">
-<h2 id="org43563f0">외부 링크</h2>
-<div class="outline-text-2" id="text-org43563f0">
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
