--- a/note/magit.html
+++ b/note/magit.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,16 +61,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1b802f5">magit-status</a></li>
-<li><a href="#org2f0580c">Stage</a></li>
-<li><a href="#org9206913">Commit</a></li>
-<li><a href="#orgc6fb271">Log</a></li>
-<li><a href="#org51bc289">Push</a></li>
-<li><a href="#org93725ad">Pull</a></li>
-<li><a href="#org52d6e12">Branch</a></li>
-<li><a href="#orgc0f969b">Reset or Revert</a></li>
-<li><a href="#orgeaedab1">기타</a></li>
-<li><a href="#org09a4035">외부 링크</a></li>
+<li><a href="#61f4e102">magit-status</a></li>
+<li><a href="#64c6da24">Stage</a></li>
+<li><a href="#59d5b10c">Commit</a></li>
+<li><a href="#ce0be71e">Log</a></li>
+<li><a href="#9c6a9d9f">Push</a></li>
+<li><a href="#718f5971">Pull</a></li>
+<li><a href="#dacdb83a">Branch</a></li>
+<li><a href="#515fb8d9">Reset or Revert</a></li>
+<li><a href="#7f598db0">기타</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -100,9 +91,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-org1b802f5" class="outline-2">
-<h2 id="org1b802f5">magit-status</h2>
-<div class="outline-text-2" id="text-org1b802f5">
+<div id="outline-container-61f4e102" class="outline-2">
+<h2 id="61f4e102">magit-status</h2>
+<div class="outline-text-2" id="text-61f4e102">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -124,9 +115,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org2f0580c" class="outline-2">
-<h2 id="org2f0580c">Stage</h2>
-<div class="outline-text-2" id="text-org2f0580c">
+<div id="outline-container-64c6da24" class="outline-2">
+<h2 id="64c6da24">Stage</h2>
+<div class="outline-text-2" id="text-64c6da24">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -139,9 +130,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org9206913" class="outline-2">
-<h2 id="org9206913">Commit</h2>
-<div class="outline-text-2" id="text-org9206913">
+<div id="outline-container-59d5b10c" class="outline-2">
+<h2 id="59d5b10c">Commit</h2>
+<div class="outline-text-2" id="text-59d5b10c">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -157,9 +148,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgc6fb271" class="outline-2">
-<h2 id="orgc6fb271">Log</h2>
-<div class="outline-text-2" id="text-orgc6fb271">
+<div id="outline-container-ce0be71e" class="outline-2">
+<h2 id="ce0be71e">Log</h2>
+<div class="outline-text-2" id="text-ce0be71e">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -169,25 +160,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org51bc289" class="outline-2">
-<h2 id="org51bc289">Push</h2>
-<div class="outline-text-2" id="text-org51bc289">
+<div id="outline-container-9c6a9d9f" class="outline-2">
+<h2 id="9c6a9d9f">Push</h2>
+<div class="outline-text-2" id="text-9c6a9d9f">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org93725ad" class="outline-2">
-<h2 id="org93725ad">Pull</h2>
-<div class="outline-text-2" id="text-org93725ad">
+<div id="outline-container-718f5971" class="outline-2">
+<h2 id="718f5971">Pull</h2>
+<div class="outline-text-2" id="text-718f5971">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org52d6e12" class="outline-2">
-<h2 id="org52d6e12">Branch</h2>
-<div class="outline-text-2" id="text-org52d6e12">
+<div id="outline-container-dacdb83a" class="outline-2">
+<h2 id="dacdb83a">Branch</h2>
+<div class="outline-text-2" id="text-dacdb83a">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -195,26 +186,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-orgc0f969b" class="outline-2">
-<h2 id="orgc0f969b">Reset or Revert</h2>
-<div class="outline-text-2" id="text-orgc0f969b">
+<div id="outline-container-515fb8d9" class="outline-2">
+<h2 id="515fb8d9">Reset or Revert</h2>
+<div class="outline-text-2" id="text-515fb8d9">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgeaedab1" class="outline-2">
-<h2 id="orgeaedab1">기타</h2>
-<div class="outline-text-2" id="text-orgeaedab1">
+<div id="outline-container-7f598db0" class="outline-2">
+<h2 id="7f598db0">기타</h2>
+<div class="outline-text-2" id="text-7f598db0">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org09a4035" class="outline-2">
-<h2 id="org09a4035">외부 링크</h2>
-<div class="outline-text-2" id="text-org09a4035">
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
