--- a/note/motion.html
+++ b/note/motion.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,15 +61,15 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9842a55">단축키</a></li>
-<li><a href="#orgcc65677">팁</a>
+<li><a href="#cedae0c3">단축키</a></li>
+<li><a href="#9ba880c5">팁</a>
 <ul>
-<li><a href="#orgb51708b">효과 적용 시간 보장하기</a></li>
+<li><a href="#6dbcb7cb">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#orgf048336">기타</a>
+<li><a href="#7f598db0">기타</a>
 <ul>
-<li><a href="#org3763058">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#a2d499f3">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -94,9 +85,9 @@
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-org9842a55" class="outline-2">
-<h2 id="org9842a55">단축키</h2>
-<div class="outline-text-2" id="text-org9842a55">
+<div id="outline-container-cedae0c3" class="outline-2">
+<h2 id="cedae0c3">단축키</h2>
+<div class="outline-text-2" id="text-cedae0c3">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -104,13 +95,13 @@
 </dl>
 </div>
 </div>
-<div id="outline-container-orgcc65677" class="outline-2">
-<h2 id="orgcc65677">팁</h2>
-<div class="outline-text-2" id="text-orgcc65677">
+<div id="outline-container-9ba880c5" class="outline-2">
+<h2 id="9ba880c5">팁</h2>
+<div class="outline-text-2" id="text-9ba880c5">
 </div>
-<div id="outline-container-orgb51708b" class="outline-3">
-<h3 id="orgb51708b">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-orgb51708b">
+<div id="outline-container-6dbcb7cb" class="outline-3">
+<h3 id="6dbcb7cb">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-6dbcb7cb">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -128,13 +119,13 @@
 </div>
 </div>
 </div>
-<div id="outline-container-orgf048336" class="outline-2">
-<h2 id="orgf048336">기타</h2>
-<div class="outline-text-2" id="text-orgf048336">
+<div id="outline-container-7f598db0" class="outline-2">
+<h2 id="7f598db0">기타</h2>
+<div class="outline-text-2" id="text-7f598db0">
 </div>
-<div id="outline-container-org3763058" class="outline-3">
-<h3 id="org3763058">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-org3763058">
+<div id="outline-container-a2d499f3" class="outline-3">
+<h3 id="a2d499f3">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-a2d499f3">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
