--- a/note/object.html
+++ b/note/object.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,16 +61,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1873c74">사전적 의미</a></li>
-<li><a href="#org333881c">컴퓨터 프로그래밍 개념 1</a></li>
-<li><a href="#org3ec452a">컴퓨터 프로그래밍 개념 2</a></li>
+<li><a href="#855e0c73">사전적 의미</a></li>
+<li><a href="#a8425806">컴퓨터 프로그래밍 개념 1</a></li>
+<li><a href="#876224d0">컴퓨터 프로그래밍 개념 2</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org1873c74" class="outline-2">
-<h2 id="org1873c74">사전적 의미</h2>
-<div class="outline-text-2" id="text-org1873c74">
+<div id="outline-container-855e0c73" class="outline-2">
+<h2 id="855e0c73">사전적 의미</h2>
+<div class="outline-text-2" id="text-855e0c73">
 <blockquote>
 <p>
 물건, 물체
@@ -90,9 +81,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org333881c" class="outline-2">
-<h2 id="org333881c">컴퓨터 프로그래밍 개념 1</h2>
-<div class="outline-text-2" id="text-org333881c">
+<div id="outline-container-a8425806" class="outline-2">
+<h2 id="a8425806">컴퓨터 프로그래밍 개념 1</h2>
+<div class="outline-text-2" id="text-a8425806">
 <p>
 오브젝트(Object, 객체)는 OOP(Object Orient Programming, 객체 지향 프로그래밍)에서
 클래스(Class)를 실체화 시킨 <a href="instance.html">인스턴스</a>를 특별히 부르는 이름이다.
@@ -103,9 +94,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org3ec452a" class="outline-2">
-<h2 id="org3ec452a">컴퓨터 프로그래밍 개념 2</h2>
-<div class="outline-text-2" id="text-org3ec452a">
+<div id="outline-container-876224d0" class="outline-2">
+<h2 id="876224d0">컴퓨터 프로그래밍 개념 2</h2>
+<div class="outline-text-2" id="text-876224d0">
 <p>
 C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브젝트 파일이라고 부른다.
 실제로 확장자가 <code>.o</code> 이다.
