--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,7 +61,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org225e1a8">외부 링크</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -87,9 +78,9 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
 상세한 내용은 <a target="_blank" href="https://seorenn.tistory.com/63">🌏Org Publish로 익스포트 자동화하기</a> 글을 참고하자.
 </p>
 
-<div id="outline-container-org225e1a8" class="outline-2">
-<h2 id="org225e1a8">외부 링크</h2>
-<div class="outline-text-2" id="text-org225e1a8">
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/manual/Publishing.html">🌏org-publish 공식 매뉴얼</a></li>
 </ul>
