--- a/note/svg.html
+++ b/note/svg.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -79,9 +70,9 @@ SVG는 XML로 표현된 오픈 표준의 포맷이라는 큰 장점이 있어서
 벡터이기 때문에 면과 면을 채우는 색, 그리고 테두리 색 등으로  이미지를 구성한다.
 </p>
 
-<div id="outline-container-org62202fd" class="outline-2">
-<h2 id="org62202fd"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
-<div class="outline-text-2" id="text-org62202fd">
+<div id="outline-container-bd37672b" class="outline-2">
+<h2 id="bd37672b"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
+<div class="outline-text-2" id="text-bd37672b">
 <p>
 <code>rsvg-convert</code> 라는 <a href="cli.html">CLI</a> 유틸리티로 변환이 가능하다.
 </p>
