--- a/note/tmux.html
+++ b/note/tmux.html
@@ -29,6 +29,7 @@
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -45,17 +46,7 @@
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 </div>
 <div class="side-ad-container"></div>
 </div>
@@ -70,20 +61,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga987e3b">사용법</a></li>
-<li><a href="#org0b23b17">설정 방법</a>
+<li><a href="#f31a3a78">사용법</a></li>
+<li><a href="#bf1a1a30">설정 방법</a>
 <ul>
-<li><a href="#org804aa6e">리더 키(Prefix) 변경하기</a></li>
+<li><a href="#636a10b2">리더 키(Prefix) 변경하기</a></li>
 </ul>
 </li>
-<li><a href="#org3c8f3f7">단축키</a></li>
-<li><a href="#orgc85f1b1">기타 팁</a>
+<li><a href="#cedae0c3">단축키</a></li>
+<li><a href="#00b97f40">기타 팁</a>
 <ul>
-<li><a href="#org631f06c">선택 영역 복사하기</a></li>
-<li><a href="#orgda45291">종료하지 않고 설정 다시 읽어 들이기</a></li>
+<li><a href="#81119fbb">선택 영역 복사하기</a></li>
+<li><a href="#11d979ec">종료하지 않고 설정 다시 읽어 들이기</a></li>
 </ul>
 </li>
-<li><a href="#org1971e18">외부 링크</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -97,9 +88,9 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 비슷하면서도 원조 격인 <code>screen</code> 이라는 도구에 영향을 많이 받은 것으로 보인다.
 </p>
 
-<div id="outline-container-orga987e3b" class="outline-2">
-<h2 id="orga987e3b">사용법</h2>
-<div class="outline-text-2" id="text-orga987e3b">
+<div id="outline-container-f31a3a78" class="outline-2">
+<h2 id="f31a3a78">사용법</h2>
+<div class="outline-text-2" id="text-f31a3a78">
 <p>
 별 다른 인자 없이 그냥 실행시키면 실행된다.
 </p>
@@ -133,16 +124,16 @@ detach 상태 즉 백그라운드 상태에 있는 tmux 에서 구동 중인 <a 
 </p>
 </div>
 </div>
-<div id="outline-container-org0b23b17" class="outline-2">
-<h2 id="org0b23b17">설정 방법</h2>
-<div class="outline-text-2" id="text-org0b23b17">
+<div id="outline-container-bf1a1a30" class="outline-2">
+<h2 id="bf1a1a30">설정 방법</h2>
+<div class="outline-text-2" id="text-bf1a1a30">
 <p>
 <code>~/.tmux.conf</code> 파일에 원하는 설정을 기록할 수 있다.
 </p>
 </div>
-<div id="outline-container-org804aa6e" class="outline-3">
-<h3 id="org804aa6e">리더 키(Prefix) 변경하기</h3>
-<div class="outline-text-3" id="text-org804aa6e">
+<div id="outline-container-636a10b2" class="outline-3">
+<h3 id="636a10b2">리더 키(Prefix) 변경하기</h3>
+<div class="outline-text-3" id="text-636a10b2">
 <p>
 기본 리더 키는 <code>^b</code> (Ctrl-B)로 설정되어 있다.
 이걸 바꾸려면, 예를 들어 리더 키를 <code>^\</code> 로 바꾸려면
@@ -172,9 +163,9 @@ set-option -g prefix2 C-']'
 </div>
 </div>
 </div>
-<div id="outline-container-org3c8f3f7" class="outline-2">
-<h2 id="org3c8f3f7">단축키</h2>
-<div class="outline-text-2" id="text-org3c8f3f7">
+<div id="outline-container-cedae0c3" class="outline-2">
+<h2 id="cedae0c3">단축키</h2>
+<div class="outline-text-2" id="text-cedae0c3">
 <p>
 아래에 언급하는 모든 단축키는 리더 키(Prefix)를 먼저 누른 후 눌러야 한다.
 참고로 리더 키는 앞서 언급한 대로
@@ -197,13 +188,13 @@ set-option -g prefix2 C-']'
 </dl>
 </div>
 </div>
-<div id="outline-container-orgc85f1b1" class="outline-2">
-<h2 id="orgc85f1b1">기타 팁</h2>
-<div class="outline-text-2" id="text-orgc85f1b1">
+<div id="outline-container-00b97f40" class="outline-2">
+<h2 id="00b97f40">기타 팁</h2>
+<div class="outline-text-2" id="text-00b97f40">
 </div>
-<div id="outline-container-org631f06c" class="outline-3">
-<h3 id="org631f06c">선택 영역 복사하기</h3>
-<div class="outline-text-3" id="text-org631f06c">
+<div id="outline-container-81119fbb" class="outline-3">
+<h3 id="81119fbb">선택 영역 복사하기</h3>
+<div class="outline-text-3" id="text-81119fbb">
 <p>
 마우스로 드래그 해서 <code>^C</code> 혹은 Command-C 를 눌렀는데 복사가 안 된다면
 <code>^W</code> (Ctrl+W)를 눌러보자.
@@ -217,9 +208,9 @@ set-option -g prefix2 C-']'
 </p>
 </div>
 </div>
-<div id="outline-container-orgda45291" class="outline-3">
-<h3 id="orgda45291">종료하지 않고 설정 다시 읽어 들이기</h3>
-<div class="outline-text-3" id="text-orgda45291">
+<div id="outline-container-11d979ec" class="outline-3">
+<h3 id="11d979ec">종료하지 않고 설정 다시 읽어 들이기</h3>
+<div class="outline-text-3" id="text-11d979ec">
 <p>
 tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 리더 키(Prefix)를 누르고 아래 커맨드를 입력해 보자.
@@ -247,9 +238,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<div id="outline-container-org1971e18" class="outline-2">
-<h2 id="org1971e18">외부 링크</h2>
-<div class="outline-text-2" id="text-org1971e18">
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gpakosz/.tmux">🌏🇫🇷 Oh My Tmux! Pretty &amp; versatile tmux configuration</a>:
 잘 만들어진 설정을 공유하고 있으며 그대로 쓰기에도 괜찮고
@@ -274,7 +265,7 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
-2020년 5월 7일 수정</div>
+2020년 5월 10일 수정</div>
 </div>
 </div>
 </div>
